3821B1PE1/9_gelu_ocl/chuvashov_andrey/log.txt
In file included from /usr/local/cuda/include/CL/cl.h:20,
                 from /home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:4:
/usr/local/cuda/include/CL/cl_version.h:22:104: note: ‘#pragma message: cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)’
   22 | #pragma message("cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)")
      |                                                                                                        ^
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp: In function ‘std::vector<float> GeluOCL(const std::vector<float>&)’:
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:29:17: error: ‘cl’ was not declared in this scope
   29 |     std::vector<cl::Platform> platforms;
      |                 ^~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:29:29: error: template argument 1 is invalid
   29 |     std::vector<cl::Platform> platforms;
      |                             ^
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:29:29: error: template argument 2 is invalid
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:30:5: error: ‘cl’ is not a class, namespace, or enumeration
   30 |     cl::Platform::get(&platforms);
      |     ^~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:32:5: error: ‘cl’ is not a class, namespace, or enumeration
   32 |     cl::Platform platform = platforms.front();
      |     ^~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:34:27: error: template argument 2 is invalid
   34 |     std::vector<cl::Device> devices;
      |                           ^
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:35:5: error: ‘platform’ was not declared in this scope; did you mean ‘platforms’?
   35 |     platform.getDevices(CL_DEVICE_TYPE_GPU, &devices);
      |     ^~~~~~~~
      |     platforms
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:36:5: error: ‘cl’ is not a class, namespace, or enumeration
   36 |     cl::Device device = devices.front();
      |     ^~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:38:5: error: ‘cl’ is not a class, namespace, or enumeration
   38 |     cl::Context context(device);
      |     ^~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:39:5: error: ‘cl’ is not a class, namespace, or enumeration
   39 |     cl::CommandQueue queue(context);
      |     ^~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:41:5: error: ‘cl’ is not a class, namespace, or enumeration
   41 |     cl::Program::Sources sources;
      |     ^~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:42:5: error: ‘sources’ was not declared in this scope
   42 |     sources.emplace_back(std::move(gelu_kernel));
      |     ^~~~~~~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:44:5: error: ‘cl’ is not a class, namespace, or enumeration
   44 |     cl::Program program(context, sources);
      |     ^~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:45:5: error: ‘program’ was not declared in this scope; did you mean ‘cl_program’?
   45 |     program.build();
      |     ^~~~~~~
      |     cl_program
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:47:5: error: ‘cl’ is not a class, namespace, or enumeration
   47 |     cl::Kernel kernel(program, "GeluOCLKernel");
      |     ^~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:49:5: error: ‘cl’ is not a class, namespace, or enumeration
   49 |     cl::Buffer bufferInput(
      |     ^~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:55:5: error: ‘cl’ is not a class, namespace, or enumeration
   55 |     cl::Buffer bufferOutput(
      |     ^~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:61:5: error: ‘queue’ was not declared in this scope
   61 |     queue.enqueueWriteBuffer(
      |     ^~~~~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:62:9: error: ‘bufferInput’ was not declared in this scope
   62 |         bufferInput,
      |         ^~~~~~~~~~~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:69:5: error: ‘kernel’ was not declared in this scope
   69 |     kernel.setArg(0, bufferInput);
      |     ^~~~~~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:70:22: error: ‘bufferOutput’ was not declared in this scope
   70 |     kernel.setArg(1, bufferOutput);
      |                      ^~~~~~~~~~~~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:75:9: error: ‘cl’ is not a class, namespace, or enumeration
   75 |         cl::NullRange,
      |         ^~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:76:9: error: ‘cl’ is not a class, namespace, or enumeration
   76 |         cl::NDRange(input.size()),
      |         ^~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:77:9: error: ‘cl’ is not a class, namespace, or enumeration
   77 |         cl::NullRange
      |         ^~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/9_gelu_ocl/chuvashov_andrey/gelu_ocl.cpp:86:9: error: ‘output’ was not declared in this scope
   86 |         output.data()
      |         ^~~~~~
